--- a/app/src/main/res/layout/hourly_weather_list_entry.xml
+++ b/app/src/main/res/layout/hourly_weather_list_entry.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/hourRecycler"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:padding="10dp">
 
     <TextView
         android:id="@+id/dayTitleText"
@@ -63,4 +64,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/hourTemperature" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
